--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 eframe = "0.32.0"
 image = "0.25.6"
 lazy_static = "1.5.0"
+rayon = "1.10.0"
 rfd = "0.15.4"
 serde_json = "1.0.142"
