--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 eframe = "0.32.0"
+egui_extras = "0.32.0"
 image = "0.25.6"
 lazy_static = "1.5.0"
 rayon = "1.10.0"
 rfd = "0.15.4"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
