--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -13,5 +13,6 @@ log = "0.4.27"
 once_cell = "1.21.3"
 rayon = "1.10.0"
 rfd = "0.15.4"
+rust_xlsxwriter = "0.90.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
