--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -10,6 +10,7 @@ egui_extras = "0.32.0"
 image = "0.25.6"
 lazy_static = "1.5.0"
 log = "0.4.27"
+notify = "8.2.0"
 once_cell = "1.21.3"
 rayon = "1.10.0"
 rfd = "0.15.4"
