--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -18,3 +18,4 @@ rfd = "0.15.4"
 rust_xlsxwriter = "0.90.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
+umya-spreadsheet = "2.3.2"
