--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -17,5 +17,5 @@ rayon = "1.10.0"
 rfd = "0.15.4"
 rust_xlsxwriter = "0.90.0"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
+serde_json = { version ="1.0.142", features = ["preserve_order"] }
 umya-spreadsheet = "2.3.2"
