--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -18,4 +18,5 @@ rfd = "0.15.4"
 rust_xlsxwriter = "0.90.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version ="1.0.142", features = ["preserve_order"] }
+tera = "1.20.0"
 umya-spreadsheet = "2.3.2"
