--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -13,6 +13,8 @@ lazy_static = "1.5.0"
 log = "0.4.27"
 notify = "8.2.0"
 once_cell = "1.21.3"
+prost = "0.14.1"
+prost-build = "0.14.1"
 rayon = "1.10.0"
 rfd = "0.15.4"
 rust_xlsxwriter = "0.90.0"
