--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 calamine = "0.30.0"
 chrono = "0.4.41"
+clap = {version= "4.5.48",features = ["derive"]}
 eframe = "0.32.0"
 egui_extras = "0.32.0"
 image = "0.25.6"
