cli模式，暂时还没调通

--- a/gable-rust/.vscode/launch.json
+++ b/gable-rust/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/gable-rust.exe",
-            "args": ["--help"],
+            "args": ["export","--data","--script"],
+            // "args": ["--help"],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
