--- a/gable-rust/.vscode/launch.json
+++ b/gable-rust/.vscode/launch.json
@@ -11,8 +11,8 @@
             "program": "${workspaceRoot}/target/debug/gable-rust.exe",
             // "args": ["export","--data","--script"],
             // "args": ["import","-f","E:/projects/test/config/__Temps/R_任务.xlsx","-p","E:/projects/test/config_temp/Task"],
-            "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/验证","-t","E:/projects/test/config_temp/Task"],
-            // "args": [""],
+            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/验证","-t","E:/projects/test/config_temp/Task"],
+            "args": [""],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
