解决默认数据bug

--- a/gable-rust/.vscode/launch.json
+++ b/gable-rust/.vscode/launch.json
@@ -9,10 +9,13 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/gable-rust.exe",
-            // "args": ["export","--data","--script"],
+            "args": ["export","--data","--script"],
             // "args": ["import","-f","E:/projects/test/config/__Temps/R_任务.xlsx","-p","E:/projects/test/config_temp/Task"],
-            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/验证","-t","E:/projects/gable_dev/config/project"],
-            "args": [""],
+            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/普通表","-t","E:/projects/gable_dev/config/project"],
+            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/枚举","-t","E:/projects/gable_dev/config/project/enums"],
+            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/KV","-t","E:/projects/gable_dev/config/project/kvs"],
+            // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/localizes","-t","E:/projects/gable_dev/config/project/localizes"],
+            // "args": [""],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
