--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -9,6 +9,7 @@ chrono = "0.4.41"
 clap = {version= "4.5.48",features = ["derive"]}
 eframe = "0.32.0"
 egui_extras = "0.32.0"
+egui_table = "0.4.0"
 image = "0.25.6"
 lazy_static = "1.5.0"
 log = "0.4.27"
