--- a/gable-rust/.vscode/launch.json
+++ b/gable-rust/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/gable-rust.exe",
+            "program": "${workspaceRoot}/target/debug/gable.exe",
             // "args": ["export","--data","--script"],
             "args": ["export","--script"],
             // "args": ["import","-f","E:/projects/test/config/__Temps/R_任务.xlsx","-p","E:/projects/test/config_temp/Task"],
