--- a/gable-rust/Cargo.toml
+++ b/gable-rust/Cargo.toml
@@ -12,6 +12,7 @@ eframe = "0.32.0"
 egui_extras = "0.32.0"
 egui_table = "0.4.0"
 image = "0.25.6"
+include_dir = "0.7.4"
 lazy_static = "1.5.0"
 log = "0.4.27"
 notify = "8.2.0"
