--- a/gable-rust/.vscode/launch.json
+++ b/gable-rust/.vscode/launch.json
@@ -10,13 +10,13 @@
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/gable.exe",
             // "args": ["export","--data","--script"],
-            // "args": ["export","--script"],
+            "args": ["export","--script", "-f", "Player","PlayerLevel"],
             // "args": ["import","-f","E:/projects/test/config/__Temps/R_任务.xlsx","-p","E:/projects/test/config_temp/Task"],
             // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/普通表","-t","E:/projects/gable_dev/config/project"],
             // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/枚举","-t","E:/projects/gable_dev/config/project/enums"],
             // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/KV","-t","E:/projects/gable_dev/config/project/kvs"],
             // "args": ["import","-d","E:/projects/test/test_xlsx/整理后文件/localizes","-t","E:/projects/gable_dev/config/project/localizes"],
-            "args": [""],
+            // "args": [""],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
